teams/services/prl_harvester/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prlbackend
  labels:
    app: prlbackend
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: prlbackend
  template:
    metadata:
      labels:
        app: prlbackend
    spec:
      containers:
        - name: prlbackend
          image: uclalibrary/prl-harvester:0.1.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status
              port: 8888
          readinessProbe:
            httpGet:
              path: /status
              port: 8888
