teams/services/prl_harvester/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prlbackend
  labels:
    app: prlbackend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    app: prlbackend
