teams/services/prl_harvester/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prlbackend
  annotations:
    cert-manager.io/cluster-issuer: sectigo-acme-clusterissuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: true
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: prlbackend-basic-auth-secrets
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Restricted'
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - backend:
              service:
                name: prlbackend
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls: 
    - hosts:
      - www.example.com
      secretName: prlbackend-tls
